--- a/META-INF/plugin.xml
+++ b/META-INF/plugin.xml
@@ -24,6 +24,7 @@
 
 	<extensions defaultExtensionNs="com.intellij">
 		<!-- Add your extensions here -->
+		<applicationConfigurable instance="org.kostaskougios.idea.preferences.SourceFolderPreferences"/>
 	</extensions>
 
 	<application-components>
