force recompile menu

--- a/META-INF/plugin.xml
+++ b/META-INF/plugin.xml
@@ -54,10 +54,13 @@
 
 	<actions>
 		<action id="scala-idea-extensions.globalEnable" class="org.kostaskougios.idea.GlobalEnable" text="Enable/Disable Scala-Idea-Extensions" description="Enables or Disables execution of all scripts">
-		<add-to-group group-id="ToolsMenu" anchor="last"/>
+			<add-to-group group-id="ToolsMenu" anchor="last"/>
 		</action>
 		<action id="scala-idea-extensions.diagnostics" class="org.kostaskougios.idea.diagnostics.DiagnosticsMenu" text="Scala-Idea-Extensions Diagnostics" description="Diagnostics are dumped into the event log">
-		<add-to-group group-id="ToolsMenu" anchor="last"/>
+			<add-to-group group-id="ToolsMenu" anchor="last"/>
+		</action>
+		<action id="scala-idea-extensions.recompile-scripts" class="org.kostaskougios.idea.scripts.ForceRefreshAction" text="Scala-Idea-Extensions Force Recompilation of scripts" description="re-compiles all scripts from all script directories">
+			<add-to-group group-id="ToolsMenu" anchor="last"/>
 		</action>
 	</actions>
 
